优化getComments方法的实现